Style was wrong, so hopefully this fixes the styles not showing

--- a/components/03-sections/05-content-group/02-news-group/news-group.scss
+++ b/components/03-sections/05-content-group/02-news-group/news-group.scss
@@ -65,7 +65,7 @@
 
 .news3-card-layout-grey::after {
 	@include news3-card-layout-after;
-    background-color: $grey-bg;
+    background-color: $grey;
 }
 
 .news3-card-layout-blue::after {
